# DeepLearnHackathon

./: .gitignore
ExoplanetSearchChallenge/: Classifier-AdamW-4-channel.ipynb  Classifier-AdamW-early-stop-medium-model.ipynb  Classifier-AdamW-early-stop.ipynb  Experiments.ipynb  Reorganised.ipynb  pyproject.toml
