[project]
name = "exoplanetsearchchallenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "pytorch-lightning>=2.5.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchmetrics>=1.7.4",
    "torchvision>=0.22.1",
]
